Added To Top in dealer lists

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -103,6 +103,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="az">Arizona</h2>
@@ -117,6 +122,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="ar">Arkansas</h2>
@@ -129,6 +139,11 @@
 <span class="grey">Website:</span> <a href="http://www.henardutility.com" target="_blank">www.henardutility.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -172,6 +187,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="co">Colorado</h2>
@@ -212,6 +232,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="fl">Florida</h2>
@@ -224,6 +249,11 @@
 <span class="grey">Website:</span> <a href="http://www.cloverleaftool.com" target="_blank">www.cloverleaftool.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -266,6 +296,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="id">Idaho</h2>
@@ -278,6 +313,11 @@
 <span class="grey">Website:</span> <a href="http://metroquip.net/" target="_blank">www.metroquip.net</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -347,7 +387,12 @@
 <span class="grey">Website:</span> <a href="http://www.vactor.com" target="_blank">www.vactor.com</a>
 </p>
                 </div>
-              </div>                        
+              </div>  
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>                      
             </li>
             <li class="list-group-item">
               <h2 id="in">Indiana</h2>
@@ -360,6 +405,11 @@
 <span class="grey">Website:</span> <a href="http://www.dohenycompanies.com" target="_blank">www.dohenycompanies.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -374,6 +424,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="ks">Kansas</h2>
@@ -386,6 +441,11 @@
 <span class="grey">Website:</span> <a href="http://www.keyequipment.com" target="_blank">www.keyequipment.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -401,6 +461,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="me">Maine</h2>
@@ -408,6 +473,11 @@
                 <div class="col-sm-4 dealer">
 
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -430,6 +500,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="ma">Massachusets</h2>
@@ -442,6 +517,11 @@
 <span class="grey">Website:</span> <a href="http://www.jfmcdermott.com" target="_blank">www.jfmcdermott.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -456,6 +536,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="mn">Minnesota</h2>
@@ -468,6 +553,11 @@
 <span class="grey">Website:</span> <a href="http://www.macqueeneq.com" target="_blank">www.macqueeneq.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -482,6 +572,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="ne">Nebraska</h2>
@@ -495,6 +590,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="nj">New Jersey</h2>
@@ -502,6 +602,11 @@
                 <div class="col-sm-4 dealer">
 
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -516,6 +621,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="nc">North Carolina</h2>
@@ -529,6 +639,11 @@
 <span class="grey">Website:</span> <a href="http://www.jet-vac.com" target="_blank">www.jet-vac.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -551,6 +666,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="ok">Oklahoma</h2>
@@ -564,6 +684,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="or">Oregon</h2>
@@ -576,6 +701,11 @@
 <span class="grey">Website:</span> <a href="http://www.owenequipment.com" target="_blank">www.owenequipment.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -596,6 +726,11 @@
 <span class="grey">Website:</span> <a href="http://www.ahequipment.com" target="_blank">www.ahequipment.com</a>
 </p>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="sc">South Carolina</h2>
@@ -610,6 +745,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="tn">Tennessee</h2>
@@ -622,6 +762,11 @@
 <span class="grey">Website:</span> <a href="http://www.spartantool.com" target="_blank">www.spartantool.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -662,6 +807,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="ut">Utah</h2>
@@ -675,6 +825,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="va">Virginia</h2>
@@ -687,6 +842,11 @@
 <span class="grey">Website:</span> <a href="http://www.mscequip.net" target="_blank">www.mscequip.net</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -709,6 +869,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="wi">Wisconsin</h2>
@@ -722,6 +887,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="wy">Wyoming</h2>
@@ -729,6 +899,11 @@
                 <div class="col-sm-4 dealer">
 
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
@@ -828,6 +1003,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="bc">British Columbia</h2>
@@ -841,6 +1021,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Ontario">Ontario</h2>
@@ -853,6 +1038,11 @@
 <span class="grey">Website:</span> <a href="http://www.novajetinc.com" target="_blank">www.novajetinc.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
@@ -891,6 +1081,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="sw-France">France</h2>
@@ -903,6 +1098,11 @@
 <span class="grey">Website:</span> <a href="http://www.rivard.fr" target="_blank">www.rivard.fr</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -924,6 +1124,11 @@
 <span class="grey">Website:</span> <a href="http://www.gruelo.de" target="_blank">www.gruelo.de</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -947,6 +1152,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="sw-Netherlands">Netherlands</h2>
@@ -968,6 +1178,11 @@
 </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="sw-Norway">Norway</h2>
@@ -980,6 +1195,11 @@
 <span class="grey">Website:</span> <a href="www.gitmark.no" target="_blank">www.gitmark.no</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -1001,6 +1221,11 @@
 <span class="grey">Website:</span> <a href="www.jetchem.com" target="_blank">www.jetchem.com</a>
 </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
