--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -47,6 +47,11 @@
                   </div>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="wb-fl">Florida</h2>
@@ -62,6 +67,11 @@
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -79,6 +89,11 @@
                   </div>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="wb-oh">Ohio</h2>
@@ -94,6 +109,11 @@
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -130,6 +150,11 @@
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
@@ -305,6 +330,11 @@
                   </div>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="india">India</h2>
@@ -325,6 +355,11 @@
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="japan">Japan</h2>
@@ -337,6 +372,11 @@
                   <span class="grey">Website:</span> <a href="http://www.nlc-japan.com" target="_blank">www.nlc-japan.com</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -365,6 +405,11 @@
                   <span class="grey">Website:</span> <a href="http://www.kiwonentec.com/html5/site/index.html#!/page_home" target="_blank">www.kiwonentec.com</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -396,6 +441,11 @@
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="taiwan">Taiwan</h2>
@@ -424,6 +474,11 @@
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="thailand">Thailand</h2>
@@ -436,6 +491,11 @@
                   <span class="grey">Website:</span> <a href="http://www.boonyanuch.com" target="_blank">www.boonyanuch.com</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
@@ -537,6 +597,11 @@ Finland</a></li>
                   </div>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Belgium">Belgium</h2>
@@ -551,6 +616,11 @@ Finland</a></li>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Czech">Czech Republic</h2>
@@ -564,6 +634,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://net-waterjet.cz/" target="_blank">www.net-waterjet.cz</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -594,6 +669,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Finland">Finland</h2>
@@ -606,6 +686,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.emleino.fi" target="_blank">www.emleino.fi</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -636,6 +721,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Germany">Germany</h2>
@@ -648,6 +738,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.salotech.de" target="_blank">www.salotech.de</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -662,6 +757,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Hungary">Hungary</h2>
@@ -674,6 +774,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.aquaprod.hu" target="_blank">www.aquaprod.hu</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -696,6 +801,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Netherlands">Netherlands</h2>
@@ -709,7 +819,13 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
-            </li><li class="list-group-item">
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
               <h2 id="Norway">Norway</h2>
               <div class="row">
                 <div class="col-sm-4">
@@ -720,6 +836,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.pumpsupply.no/" target="_blank">www.pumpsupply.no</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -742,6 +863,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Portugal">Portugal</h2>
@@ -755,6 +881,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Romania">Romania</h2>
@@ -767,6 +898,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.gimsid.ro" target="_blank">www.gimsid.ro</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -789,6 +925,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Sweden">Sweden</h2>
@@ -801,6 +942,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.aquajet.se" target="_blank">www.aquajet.se</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -815,6 +961,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </p>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="UK">United Kingdom</h2>
@@ -827,6 +978,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Website:</span> <a href="http://www.aquapower.uk.com" target="_blank">www.aquapower.uk.com</a>
                   </p>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
@@ -867,6 +1023,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </div>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Brazil">Brazil</h2>
@@ -882,6 +1043,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -899,6 +1065,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   </div>
                 </div>
               </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
             </li>
             <li class="list-group-item">
               <h2 id="Colombia">Colombia</h2>
@@ -914,6 +1085,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
             <li class="list-group-item">
@@ -961,6 +1137,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
