--- a/assets/plugins/mixitup/landing-mix.css
+++ b/assets/plugins/mixitup/landing-mix.css
@@ -66,7 +66,7 @@
 }
 
 .directory .mix{
-  border: 1px solid #efefef;
+/*  border: 1px solid #efefef;*/
   border-radius: 4px;
   margin-bottom: 2%;
   
