add configurator examples

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,6 +79,8 @@
   {% include contact-houston.html %}
   {% include contact-ohio.html %}
   {% include contact-la.html %}
+  {% include config-bjv-includes.html %}
+  {% include config-nav-includes.html %}
   
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
