reposition dependency links

--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -1,5 +1,6 @@
 {% if page.landing %}
-<!--Google Maps API-->
+<link href="/assets/plugins/mixitup/landing-mix.css" type="text/css" rel="stylesheet" />
+
 <script src="http://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
 <script>
 $(document).ready(function(){
