--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,5 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   
   <!-- Plugin Styles -->
-  <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" />
-  <link href="/assets/plugins/mixitup/landing-mix.css" type="text/css" rel="stylesheet" />
+  <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" /><!-- Lighbox -->
 </head>
