add detail table

--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -6,7 +6,11 @@
 $(document).ready(function(){
   $(function(){
       // Instantiate MixItUp:
-      $('#Container').mixItUp();
+      $('#Container').mixItUp({
+        load: {
+          sort: 'myorder:asc'
+        }
+      });
   });
 })
 </script>
